--- a/jenkins-examples/pipeline-examples/declarative-examples/build-scan-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/declarative-examples/build-scan-example/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 rtServer (
                     id: "ARTIFACTORY_SERVER",
                     url: SERVER_URL,
-                    credentialsId: CREDENTIALS
+                    credentialsId: "admin:asdf1234"
                 )
 
                 rtMavenDeployer (
