--- a/jenkins-examples/pipeline-examples/declarative-examples/npm-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/declarative-examples/npm-example/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                 rtServer (
                     id: "ARTIFACTORY_SERVER",
                     url: SERVER_URL,
-                    credentialsId: CREDENTIALS
+                    credentialsId: "admin:asdf1234"
                 )
 
                 rtNpmResolver (
